Ref #56: Add stats routes
Add routes to get the total number of elements in database,
movies/series by year/location
