# doc/swagger.yml
@@ -102,6 +102,54 @@ components:
       required:
         - location
         - is_physical
+    LocationStats:
+      properties:
+        id:
+          type: integer
+        location:
+          type: string
+        movie_count:
+          type: integer
+        serie_count:
+          type: integer
+      required:
+        - id
+        - location
+        - movie_count
+        - serie_count
+    FullStats:
+      properties:
+        movie_count:
+          type: integer
+        serie_count:
+          type: integer
+        location_count:
+          type: integer
+        category_count:
+          type: integer
+      required:
+        - movie_count
+        - serie_count
+        - location_count
+        - category_count
+    YearMoviesStats:
+      properties:
+        year:
+          type: integer
+        movie_count:
+          type: integer
+      required:
+        - year
+        - movie_count
+    YearSeriesStats:
+      properties:
+        year:
+          type: integer
+        serie_count:
+          type: integer
+      required:
+        - year
+        - serie_count
 
 paths:
   /healthcheck:
@@ -459,3 +507,96 @@ paths:
           description: Location successfully deleted
         '404':
           description: Location does not exist
+  /locations/count:
+    get:
+      summary: Count element in all locations
+      description: Count number of movies and series in all locations
+      tags:
+        - locations
+      responses:
+        '200':
+          description: A JSON array of location stats
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/LocationStats'
+        '500':
+          description: Unexpected error
+  /locations/{locationId}/count:
+    get:
+      summary: Count element in a location
+      description: Count number of movies and series in a specific location
+      tags:
+        - locations
+      parameters:
+        - name: locationId
+          in: path
+          required: true
+          description: ID of the location to edit
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+      responses:
+        '200':
+          description: The stats for a single location
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LocationStats'
+        '404':
+          description: Location does not exist
+        '500':
+          description: Unexpected error
+
+  /stats:
+    get:
+      summary: Get complete stats for the database
+      description: Get the number of all elements in the database
+      tags:
+        - stats
+      responses:
+        '200':
+          description: Complete database stats
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FullStats'
+        '500':
+          description: Unexpected error
+  /stats/year/movies:
+    get:
+      summary: Get movie count by year
+      description: Get the number of movies by year
+      tags:
+        - stats
+      responses:
+        '200':
+          description: A JSON array of movies stats by year
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/YearMoviesStats'
+        '500':
+          description: Unexpected error
+  /stats/year/series:
+    get:
+      summary: Get serie count by year
+      description: Get the number of series by year
+      tags:
+        - stats
+      responses:
+        '200':
+          description: A JSON array of series stats by year
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/YearSeriesStats'
+        '500':
+          description: Unexpected error
